Add custom design based on darkly

--- a/test/dummy_rails/app/views/pages/root.html.slim
+++ b/test/dummy_rails/app/views/pages/root.html.slim
@@ -55,7 +55,11 @@
         h2 3 columns
         .btn-group
           button.btn.btn-primary type='button' Button
-          button.btn.btn-primary type='button' Button
+          button.btn.btn-info type='button' Button
+          button.btn.btn-warning type='button' Button
+          button.btn.btn-danger type='button' Button
+          button.btn.btn-default type='button' Button
+          button.btn.btn-link type='button' Button
         h2 Icons
         ul.list-inline
           li: i.glyphicon.glyphicon-user
